# python-ifconfig-me

./: .gitignore  Makefile  README.md  pyproject.toml  python_ifconfig_me.py  tox.ini
.github/workflows/: pr-checking.yml  python-package.yml
python_ifconfig_me/: __init__.py  cli.py
python_ifconfig_me/core/: getPublicIP.py
python_ifconfig_me/ipretriever/: IPRetriever.py  callbackIPRetriever.py  simpleTextIPRetriever.py
python_ifconfig_me/utils/: __init__.py
python_ifconfig_me/vote/: statisticsInformationItem.py  voteStrategy.py  votingStrategy.py
tests/: test_get_args.py  test_getip.py
